--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
-  "name": "movie-troopers",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Adi Purnomo",
-  "license": "ISC"
+	"name": "movie-troopers",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Adi Purnomo",
+	"license": "ISC",
+	"dependencies": {
+		"@popperjs/core": "^2.4.4",
+		"font-awesome": "^4.7.0"
+	},
+	"devDependencies": {
+		"bootstrap": "^4.0.0",
+		"jquery": "^3.5.1"
+	}
 }
