--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
 	"license": "ISC",
 	"dependencies": {
 		"@popperjs/core": "^2.4.4",
-		"font-awesome": "^4.7.0"
-	},
-	"devDependencies": {
+		"font-awesome": "^4.7.0",
 		"bootstrap": "^4.0.0",
 		"jquery": "^3.5.1"
+	},
+	"devDependencies": {
+		"http-server": "^0.12.3"
 	}
 }
