--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "http-server"
+		"start": "http-server .",
+		"build": "webpack"
 	},
 	"author": "Adi Purnomo",
 	"license": "ISC",
