--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bootstrap": "^4.0.0",
 		"copy-webpack-plugin": "^6.0.3",
 		"font-awesome": "^4.7.0",
+		"hover.css": "^2.3.2",
 		"jquery": "^3.5.1",
 		"popper.js": "^1.16.1"
 	},
