Refactor - refactor all project files

--- a/package.json
+++ b/package.json
@@ -1,35 +1,61 @@
 {
-	"name": "movie-troopers",
+	"name": "movie-trooper",
 	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start-dev": "http-server",
-		"build": "webpack"
-	},
+	"description": "Movie finder",
+	"main": "app.js",
 	"author": "Adi Purnomo",
 	"license": "ISC",
+	"scripts": {
+		"start": "webpack-dev-server --config webpack.dev.js",
+		"build": "webpack --config webpack.dev.js"
+	},
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^5.14.0",
 		"@popperjs/core": "^2.4.4",
-		"animejs": "^3.2.0",
-		"autoprefixer": "^9.8.6",
-		"bootstrap": "^4.0.0",
-		"copy-webpack-plugin": "^6.0.3",
+		"aos": "^3.0.0-beta.6",
+		"bootstrap": "^4.5.0",
+		"file-loader": "^6.0.0",
 		"font-awesome": "^4.7.0",
+		"fsevents": "^2.1.3",
 		"hover.css": "^2.3.2",
+		"image-webpack-loader": "^6.0.0",
 		"jquery": "^3.5.1",
-		"popper.js": "^1.16.1"
+		"mini-css-extract-plugin": "^0.9.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.3",
+		"popper.js": "^1.16.1",
+		"regenerator-runtime": "^0.13.7",
+		"url-loader": "^4.1.0"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.11.1",
+		"@babel/preset-env": "^7.11.0",
+		"autoprefixer": "^9.8.6",
+		"babel-loader": "^8.1.0",
+		"babel-plugin-transform-es2015-modules-strip": "^0.1.1",
+		"clean-webpack-plugin": "^3.0.0",
+		"cross-env": "^7.0.2",
 		"css-loader": "^4.2.0",
+		"eslint": "^7.6.0",
+		"eslint-config-standard": "^14.1.1",
+		"eslint-loader": "^4.0.2",
+		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"eslint-plugin-standard": "^4.0.1",
+		"exports-loader": "^1.1.0",
+		"extract-loader": "^5.1.0",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"font-awesome-loader": "^1.0.2",
+		"html-loader": "^1.1.0",
 		"html-webpack-plugin": "^4.3.0",
-		"http-server": "^0.12.3",
-		"mini-css-extract-plugin": "^0.9.0",
+		"node-sass": "^4.14.1",
 		"postcss-loader": "^3.0.0",
 		"sass-loader": "^9.0.2",
 		"style-loader": "^1.2.1",
 		"webpack": "^4.44.1",
-		"webpack-cli": "^3.3.12"
+		"webpack-cli": "^3.3.12",
+		"webpack-dev-server": "^3.11.0",
+		"webpack-merge": "^5.1.0",
+		"webpack-module-hot-accept": "^1.0.5",
+		"webpack-validator": "^3.0.1"
 	}
 }
